Add validation for empty notes in lote and update test cases for number limits